[project]
name = "prx"
version = "0.0.1"
description = "Making raw GNSS data more accessible"
readme = "README.md"
authors = [
    { name = "Jan Bolting", email = "janbolting@gmail.com" },
    { name = "Paul Thevenon", email = "paul.thevenon@gmail.com" },
]
license = { text = "MIT" }
requires-python = "<3.13,>=3.10"
dependencies = [
    "pandas<3.0.0,>=2.2.3",
    "numpy<3.0,>=2.2",
    "joblib<2.0.0,>=1.4.2",
    "imohash<2.0.0,>=1.1.0",
    "flake8<8.0.0,>=7.1.1",
    "dotmap<2.0.0,>=1.3.30",
    "pytest<9.0.0,>=8.3.4",
    "gitpython<4.0.0,>=3.1.41",
    "scipy<2.0.0,>=1.14.1",
    "matplotlib<4.0.0,>=3.10.0",
    "pytest-xdist<4.0.0,>=3.5.0",
    "ruff<1.0.0,>=0.11.2",
    "snakeviz<3.0.0,>=2.2.2",
    "astropy<7.0.0,>=6.1.7",
    "setuptools>=75.6.0,<79.0.0",
    "viztracer<2.0.0,>=1.0.0",
    "plotly>=5.24.1,<7.0.0",
    "line-profiler<5.0.0,>=4.2.0",
    "requests<3.0.0,>=2.32.3",
    "hatchling>=1.27.0",
    "georinex>=1.16.2",
]

[tool.pytest]
log_cli_level = "INFO"
log_cli = 1

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/prx/*.py", "src/prx/tools/*"]
