[project]
name = "prx"
version = "0.0.1"
description = "Making raw GNSS data more accessible."
readme = "README.md"
authors = [
    { name = "Jan Bolting", email = "janbolting@gmail.com" },
    { name = "Paul Thevenon", email = "paul.thevenon@gmail.com" },
]
license = { text = "MIT" }
requires-python = "<3.13,>=3.10"
dependencies = [
    "pandas<3.0.0,>=2.2.3",
    "numpy<3.0,>=2.2",
    "joblib<2.0.0,>=1.4.2",
    "imohash<2.0.0,>=1.1.0",
    "flake8<8.0.0,>=7.1.1",
    "dotmap<2.0.0,>=1.3.30",
    "pytest<9.0.0,>=8.3.4",
    "gitpython<4.0.0,>=3.1.41",
    "scipy<2.0.0,>=1.14.1",
    "matplotlib<4.0.0,>=3.10.0",
    "pytest-xdist<4.0.0,>=3.5.0",
    "ruff<1.0.0,>=0.11.2",
    "snakeviz<3.0.0,>=2.2.2",
    "astropy<7.0.0,>=6.1.7",
    "setuptools>=75.6.0,<81.0.0",
    "viztracer<2.0.0,>=1.0.0",
    "plotly>=5.24.1,<7.0.0",
    "line-profiler>=4.2.0,<5.0.0",
    "requests<3.0.0,>=2.32.3",
    "hatchling>=1.27.0",
    "georinex",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
prx = "prx:main"

[tool.pytest]
log_cli_level = "INFO"
log_cli = 1

[tool.uv]
package = true
python-preference = "only-managed"

[tool.uv.sources]
georinex = { git = "https://github.com/geospace-code/georinex", rev = "95ef1d8e7150f998a1b5a429090cadb429128648" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/prx"]
include = [
    "src/prx",
]
exclude = [
    "src/prx/test",
    "src/prx/sp3/test",
    "src/prx/rinex_nav/test",
    "src/prx/rinex_obs/test",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prx"]
include = [
    "src/prx",
]
exclude = [
    "src/prx/test",
    "src/prx/sp3/test",
    "src/prx/rinex_nav/test",
    "src/prx/rinex_obs/test",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"
