[project]
name = "prx"
version = "0.0.1"
description = "Making raw GNSS data more accessible."
readme = "README.md"
authors = [
    { name = "Jan Bolting", email = "janbolting@gmail.com" },
    { name = "Paul Thevenon", email = "paul.thevenon@gmail.com" },
]
license = { text = "MIT" }
requires-python = "<3.14,>=3.10"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "numpy>=2.2.6,<3.0",
    "joblib>=1.5.3,<2.0.0",
    "imohash<2.0.0,>=1.1.0",
    "flake8>=7.3.0,<8.0.0",
    "dotmap<2.0.0,>=1.3.30",
    "gitpython>=3.1.50,<4.0.0",
    "scipy>=1.15.3,<2.0.0",
    "matplotlib>=3.10.9,<4.0.0",
    "astropy>=6.1.7,<7.0.0",
    "astropy-iers-data>=0.2026.5.18.1.11.28",
    "setuptools>=82.0.1,<83.0.0",
    "plotly>=6.7.0,<7.0.0",
    "requests>=2.34.2,<3.0.0",
    "georinex",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
]

[project.scripts]
prx = "prx:main"

[tool.pytest]
log_cli_level = "INFO"
log_cli = true

[tool.uv]
package = true
python-preference = "only-managed"

[tool.uv.sources]
georinex = { git = "https://github.com/geospace-code/georinex", rev = "95ef1d8e7150f998a1b5a429090cadb429128648" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "line-profiler>=5.0.2",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.14",
    "snakeviz>=2.2.2",
    "viztracer>=1.1.1",
    "pytest-profiling>=1.8.1",
    "memray>=1.19.3;platform_system != 'Windows'",
]

[tool.hatch.build.targets.sdist]
packages = ["src/prx"]
include = [
    "src/prx",
]
exclude = [
    "src/prx/test",
    "src/prx/sp3/test",
    "src/prx/rinex_nav/test",
    "src/prx/rinex_obs/test",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prx"]
include = [
    "src/prx",
]
exclude = [
    "src/prx/test",
    "src/prx/sp3/test",
    "src/prx/rinex_nav/test",
    "src/prx/rinex_obs/test",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"
